SOURCE/Vcl/IMAGEHLP.PAS


{$EXTERNALSYM SymGetSymPrev}
function SymGetSymPrev(hProcess: THandle; var Symbol: TImagehlpSymbol): Bool; stdcall;

{$EXTERNALSYM SymInitialize}
function SymInitialize(hProcess: THandle; UserSearchPath: LPSTR;
  fInvadeProcess: Bool): Bool; stdcall;

{$EXTERNALSYM SymGetSearchPath}
function SymGetSearchPath(hProcess: THandle; SearchPath: LPSTR;
  SearchPathLength: DWORD): Bool; stdcall;

{$EXTERNALSYM SymSetSearchPath}
function SymSetSearchPath(hProcess: THandle; SearchPath: LPSTR): Bool; stdcall;

{$EXTERNALSYM SymLoadModule}
function SymLoadModule(hProcess: THandle; hFile: THandle; ImageName,
  ModuleName: LPSTR; BaseOfDll, SizeOfDll: DWORD): Bool; stdcall;

{$EXTERNALSYM SymUnloadModule}
function SymUnloadModule(hProcess: THandle; BaseOfDll: DWORD): Bool; stdcall;

{$EXTERNALSYM SymUnDName}
function SymUnDName(sym: PImagehlpSymbol; UnDecName: LPSTR;
  UnDecNameLength: DWORD): Bool; stdcall;

{$EXTERNALSYM SymRegisterCallback}
function SymRegisterCallback(hProcess: THandle;
  CallbackFunction: TSymbolRegisteredCallback; UserContext: Pointer): Bool; stdcall;

{ Image Integrity API's }

const
  {$EXTERNALSYM CERT_PE_IMAGE_DIGEST_DEBUG_INFO}
  CERT_PE_IMAGE_DIGEST_DEBUG_INFO             = $01;
  {$EXTERNALSYM CERT_PE_IMAGE_DIGEST_RESOURCES}
  CERT_PE_IMAGE_DIGEST_RESOURCES              = $02;
  {$EXTERNALSYM CERT_PE_IMAGE_DIGEST_ALL_IMPORT_INFO}
  CERT_PE_IMAGE_DIGEST_ALL_IMPORT_INFO        = $04;

  {$EXTERNALSYM CERT_SECTION_TYPE_ANY}
  CERT_SECTION_TYPE_ANY                       = $FF;      { Any Certificate type }

type
  {$EXTERNALSYM DIGEST_HANDLE}
  DIGEST_HANDLE = Pointer;
  TDigestHandle = DIGEST_HANDLE;

type
  {$EXTERNALSYM DIGEST_FUNCTION}
  DIGEST_FUNCTION = function(refdata: TDigestHandle; pData: PByte;
    dwLength: DWORD): Bool; stdcall;
  TDigestFunction = DIGEST_FUNCTION;

{$EXTERNALSYM ImageGetDigestStream}
function ImageGetDigestStream(FileHandle: THandle; DigestLevel: DWORD;
  DigestFunction: TDigestFunction; DigestHandle: TDigestHandle): Bool; stdcall;

{$EXTERNALSYM ImageAddCertificate}
function ImageAddCertificate(FileHandle: THandle;
  var Certificate: PWinCertificate; var Index: DWORD): Bool; stdcall;

{$EXTERNALSYM ImageRemoveCertificate}
function ImageRemoveCertificate(FileHandle: THandle; Index: DWORD): Bool; stdcall;

{$EXTERNALSYM ImageEnumerateCertificates}
function ImageEnumerateCertificates(FileHandle: THandle; TypeFilter: Word;
  CertificateCount, Indices, IndexCount: PDWORD): Bool; stdcall;

{$EXTERNALSYM ImageGetCertificateData}
function ImageGetCertificateData(FileHandle: THandle; CertificateIndex: DWORD;
  Certificate: PWinCertificate; var RequiredLength: DWORD): Bool; stdcall;

{$EXTERNALSYM ImageGetCertificateHeader}
function ImageGetCertificateHeader(FileHandle: THandle; CertificateIndex: DWORD;
  var Certificateheader: PWinCertificate): Bool; stdcall;

implementation

const
  ImagehlpLib = 'IMAGEHLP.DLL';

function BindImage;                     external ImagehlpLib name 'BindImage';
function BindImageEx;                   external ImagehlpLib name 'BindImageEx';
function CheckSumMappedFile;            external ImagehlpLib name 'CheckSumMappedFile';
function EnumerateLoadedModules;        external ImagehlpLib name 'EnumerateLoadedModules';
function FindDebugInfoFile;             external ImagehlpLib name 'FindDebugInfoFile';
function FindExecutableImage;           external ImagehlpLib name 'FindExecutableImage';
function GetImageConfigInformation;     external ImagehlpLib name 'GetImageConfigInformation';
function GetImageUnusedHeaderBytes;     external ImagehlpLib name 'GetImageUnusedHeaderBytes';
function GetTimestampForLoadedLibrary;  external ImagehlpLib name 'GetTimestampForLoadedLibrary';
function ImageAddCertificate;           external ImagehlpLib name 'ImageAddCertificate';
function ImageDirectoryEntryToData;     external ImagehlpLib name 'ImageDirectoryEntryToData';
function ImageEnumerateCertificates;    external ImagehlpLib name 'ImageEnumerateCertificates';
function ImageGetCertificateData;       external ImagehlpLib name 'ImageGetCertificateData';
function ImageGetCertificateHeader;     external ImagehlpLib name 'ImageGetCertificateHeader';
function ImageGetDigestStream;          external ImagehlpLib name 'ImageGetDigestStream';
function ImagehlpApiVersion;            external ImagehlpLib name 'ImagehlpApiVersion';
function ImagehlpApiVersionEx;          external ImagehlpLib name 'ImagehlpApiVersionEx';
function ImageLoad;                     external ImagehlpLib name 'ImageLoad';
function ImageNtHeader;                 external ImagehlpLib name 'ImageNtHeader';
function ImageRemoveCertificate;        external ImagehlpLib name 'ImageRemoveCertificate';
function ImageRvaToSection;             external ImagehlpLib name 'ImageRvaToSection';
function ImageRvaToVa;                  external ImagehlpLib name 'ImageRvaToVa';
function ImageUnload;                   external ImagehlpLib name 'ImageUnload';
function MakeSureDirectoryPathExists;   external ImagehlpLib name 'MakeSureDirectoryPathExists';
function MapAndLoad;                    external ImagehlpLib name 'MapAndLoad';
function MapDebugInformation;           external ImagehlpLib name 'MapDebugInformation';
function MapFileAndCheckSum;           external ImagehlpLib name 'MapFileAndCheckSumA';
function MapFileAndCheckSumA;           external ImagehlpLib name 'MapFileAndCheckSumA';
function MapFileAndCheckSumW;           external ImagehlpLib name 'MapFileAndCheckSumW';
function ReBaseImage;                   external ImagehlpLib name 'ReBaseImage';
function RemovePrivateCvSymbolic;       external ImagehlpLib name 'RemovePrivateCvSymbolic';
procedure RemoveRelocations;            external ImagehlpLib name 'RemoveRelocations';
function SearchTreeForFile;             external ImagehlpLib name 'SearchTreeForFile';
function SetImageConfigInformation;     external ImagehlpLib name 'SetImageConfigInformation';
function SplitSymbols;                  external ImagehlpLib name 'SplitSymbols';
function StackWalk;                     external ImagehlpLib name 'StackWalk';
function SymCleanup;                    external ImagehlpLib name 'SymCleanup';
function SymEnumerateModules;           external ImagehlpLib name 'SymEnumerateModules';
function SymEnumerateSymbols;           external ImagehlpLib name 'SymEnumerateSymbols';
function SymFunctionTableAccess;        external ImagehlpLib name 'SymFunctionTableAccess';
function SymGetModuleBase;              external ImagehlpLib name 'SymGetModuleBase';
function SymGetModuleInfo;              external ImagehlpLib name 'SymGetModuleInfo';
function SymGetOptions;                 external ImagehlpLib name 'SymGetOptions';
function SymGetSearchPath;              external ImagehlpLib name 'SymGetSearchPath';
function SymGetSymFromAddr;             external ImagehlpLib name 'SymGetSymFromAddr';
function SymGetSymFromName;             external ImagehlpLib name 'SymGetSymFromName';
function SymGetSymNext;                 external ImagehlpLib name 'SymGetSymNext';
function SymGetSymPrev;                 external ImagehlpLib name 'SymGetSymPrev';
function SymInitialize;                 external ImagehlpLib name 'SymInitialize';
function SymLoadModule;                 external ImagehlpLib name 'SymLoadModule';
function SymRegisterCallback;           external ImagehlpLib name 'SymRegisterCallback';
function SymSetOptions;                 external ImagehlpLib name 'SymSetOptions';
function SymSetSearchPath;              external ImagehlpLib name 'SymSetSearchPath';
function SymUnDName;                    external ImagehlpLib name 'SymUnDName';
function SymUnloadModule;               external ImagehlpLib name 'SymUnloadModule';
function TouchFileTimes;                external ImagehlpLib name 'TouchFileTimes';
function UnDecorateSymbolName;          external ImagehlpLib name 'UnDecorateSymbolName';
function UnMapAndLoad;                  external ImagehlpLib name 'UnMapAndLoad';
function UnmapDebugInformation;         external ImagehlpLib name 'UnmapDebugInformation';
function UpdateDebugInfoFile;           external ImagehlpLib name 'UpdateDebugInfoFile';
function UpdateDebugInfoFileEx;         external ImagehlpLib name 'UpdateDebugInfoFileEx';

end.
